--- a/form.html
+++ b/form.html
@@ -65,42 +65,37 @@
                     <form>
                         <h2 class="mb-4 metal-mania-regular">Danos tu opinión</h2>
 
-                        <!-- Puntuación -->
                         <div class="mb-3">
                             <label for="rating" class="form-label lora">¿Qué puntuación le darías a la página? (1 a 10)</label>
                             <input type="number" min="1" max="10" class="form-control lora_black" id="rating" name="rating" required>
                         </div>
 
-                        <!-- Te gustó -->
                         <div class="mb-3">
                             <label class="form-label lora">¿Te gustó la página?</label>
                             <div class="form-check">
                             <input class="form-check-input" type="radio" name="liked" id="likedYes" value="Sí" required>
-                            <label class="form-check-label lora_black" for="likedYes">
+                            <label class="form-check-label lora" for="likedYes">
                                 Sí
                             </label>
                             </div>
                             <div class="form-check">
                             <input class="form-check-input" type="radio" name="liked" id="likedNo" value="No" required>
-                            <label class="form-check-label lora_black" for="likedNo">
+                            <label class="form-check-label lora" for="likedNo">
                                 No
                             </label>
                             </div>
                         </div>
 
-                        <!-- Mejoras -->
                         <div class="mb-3">
                             <label for="improvements" class="form-label lora">¿En qué podríamos mejorar?</label>
                             <textarea class="form-control lora_black" id="improvements" name="improvements" rows="3"></textarea>
                         </div>
 
-                        <!-- Errores -->
                         <div class="mb-3">
                             <label for="errors" class="form-label lora">¿Encontraste algún error?</label>
                             <textarea class="form-control lora_black" id="errors" name="errors" rows="2"></textarea>
                         </div>
 
-                        <!-- Sugerencias -->
                         <div class="mb-3">
                             <label for="suggestions" class="form-label lora">¿Qué subgénero, banda u otra cosa te gustaría que agreguemos?</label>
                             <textarea class="form-control lora_black" id="suggestions" name="suggestions" rows="2"></textarea>
