--- a/subgeneros/thrash.html
+++ b/subgeneros/thrash.html
@@ -14,7 +14,7 @@
 
     <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-            <div class="container-fluid">="#">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                         <img src="../imagenes/2-inch-mild-steel-galvanized-square-pipe.png" alt="Bootstrap" width="80" height="60">
                     </a>
